Fix overlap on back to top link

--- a/static/sass/_pattern_footer.scss
+++ b/static/sass/_pattern_footer.scss
@@ -31,6 +31,7 @@
 
       @media only screen and (min-width: $breakpoint-medium) {
         border: 0;
+        margin-top: 0 !important;
       }
 
       &.u-clearfix {
